--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,10 @@
     <style type="text/css">.body { width: auto; }</style>
   </head>
   <body>
+    <label for="fname">Food Origin:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+  </form>
 
-    <h1>NASA Picture of the Day: {{date}}</h1>
-    {% if data['media_type']== "video"%}
-      <iframe width="420" height="315" src="{{data['url']}}" frameborder="5"></iframe>
-    {% else %}
-      <img class="aotd-img" src="{{data['url']}}">
-    {% endif %}
-    <h3>{{data['title']}}</h3>
-    <p> {{ data['explanation']}}</p>
     
   </body>
 </html>
